--- a/Touch The Cloud.html
+++ b/Touch The Cloud.html
@@ -57,12 +57,11 @@
         <div id="page-hl" class="section section-content">
             <!-- #updates-slider -->
             <div id="updates-slider" class="owl-carousel slider section section-light-grey template-here template-delegate"></div>
-            <div id="pop-blub" class="container"> <a id="team-owner-blub" href="#team" class="popup" title="Champions"><span class="blub-avatar"><i class="fa fa-user"></i><span class="txts" style="line-height:1.1; display: block; font-size: 0.75em; margin-top: 3px">Champions</span></span></a> <a id="conversation-blub" href="mailto:geries.abouayash@oracle.com,vijay.pawar@oracle.com?subject=Touch The Cloud" title="" target="_blank"><span class="blub-avatar"><i class="fa fa-envelope"></i><span class="txts" style="line-height:1.1; display: block; font-size: 0.75em; margin-top: 3px">E-mail</span></span></a> </div>
-            <!-- /#team -->
-            <div id="team" class="popup-box mfp-hide template-here template-delegate"></div>
-            <!-- /#dashboard -->
-            <div id="dashboard" data-value="dashboard_workshops_1" class="section section-content section-light-grey template-here template-delegate"></div>
         </div>
+        <!-- /#team -->
+        <div id="team" class="popup-box mfp-hide template-here template-delegate"></div>
+        <!-- /#dashboard -->
+        <!--        <div id="dashboard" data-value="dashboard_workshops_1" class="section section-content section-light-grey template-here template-delegate"></div>-->
         <!-- /#page-hl -->
         <div id="popup-slider1" class="modal fade" role="dialog">
             <div class="modal-dialog">
@@ -70,11 +69,47 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Call to Action</h4> </div>
+                        <h4 class="modal-title">Run One Today</h4> </div>
                     <div class="modal-body">
-                        <p>&bull; Contact the NAS SC team to book a date (<a href="#" target="_blank">Person 1</Person></a> or <a href="#" target="_blank">Person 2</a>)</p>
+                        <p>&bull; Contact the NAS SC team to book a date (<a href="#" target="_blank">Person 1</a> or <a href="#" target="_blank">Person 2</a>)</p>
                         <p>&bull; Find a nice location to conduct the event (can be Oracle offices if appropriate) and ensure catering of snacks and lunch</p>
                         <p>&bull; Invite your customers using the <a href="" target="_blank">invite template</a></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="popup-slider2" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Get Hands-on OPC</h4> </div>
+                    <div class="modal-body">
+                        <p>&bull; Check out hands-on OPC workshops <a href="https://innovate.us.oracle.com/" target="_blank">HERE</a></p>
+                        <p>&bull; Find a workshop that best fits your customer&#39;s needs</p>
+                        <p>&bull; Book an event today to get your customers engaging in our cloud</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="popup-slider3" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Live for the Code</h4> </div>
+                    <div class="modal-body">
+                        <p>&bull; Have your customers join us at an event near you</p>
+                        <p>&bull; Come see what Oracle is doing in the cloud with speakers, workshops and an interactive lounge</p>
+                        <p>&bull; Register for the event <a href="http://code.oracle.com/oraclecode" target="_blank">HERE</a></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
