--- a/Touch The Cloud.html
+++ b/Touch The Cloud.html
@@ -71,7 +71,7 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Run One Today</h4> </div>
                     <div class="modal-body">
-                        <p>&bull; Contact the NAS SC team to book a date (<a href="#" target="_blank">Person 1</a> or <a href="#" target="_blank">Person 2</a>)</p>
+                        <p>&bull; Contact the NAS Cloud Platform Specialist team to book a date or contact (<a href="#" target="_blank">Vijay Pawar</a> or <a href="#" target="_blank">Person 2</a>)</p>
                         <p>&bull; Find a nice location to conduct the event (can be Oracle offices if appropriate) and ensure catering of snacks and lunch</p>
                         <p>&bull; Invite your customers using the <a href="" target="_blank">invite template</a></p>
                     </div>
