--- a/Touch The Cloud.html
+++ b/Touch The Cloud.html
@@ -89,7 +89,7 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Get Hands-on OPC</h4> </div>
                     <div class="modal-body">
-                        <p>&bull; Check out hands-on OPC workshops <a href="https://innovate.us.oracle.com/" target="_blank">HERE</a></p>
+                        <p>&bull; Check out hands-on OPC workshops <a href="http://innovate.us.oracle.com:81/opcworkshops/index.html" target="_blank">HERE</a></p>
                         <p>&bull; Find a workshop that best fits your customer&#39;s needs</p>
                         <p>&bull; Book an event today to get your customers engaging in our cloud</p>
                     </div>
@@ -109,7 +109,7 @@
                     <div class="modal-body">
                         <p>&bull; Have your customers join us at an event near you</p>
                         <p>&bull; Come see what Oracle is doing in the cloud with speakers, workshops and an interactive lounge</p>
-                        <p>&bull; Register for the event <a href="http://code.oracle.com/oraclecode" target="_blank">HERE</a></p>
+                        <p>&bull; Register for the nearest event <a href="https://developer.oracle.com/code" target="_blank">HERE</a></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
