Edit brochure link

--- a/Touch The Cloud.html
+++ b/Touch The Cloud.html
@@ -73,7 +73,7 @@
                     <div class="modal-body">
                         <p>&bull; Contact the NAS Cloud Platform Specialist team to book a date or contact (<a href="mailto:vijay.pawar@oracle.com" target="_blank">Vijay Pawar</a>)</p>
                         <p>&bull; Find a nice location to conduct the event (can be Oracle offices if appropriate) and ensure catering of snacks and lunch</p>
-                        <p>&bull; Invite your customers using the <a href="" target="_blank">invite template</a></p>
+                        <p>&bull; Invite your customers using the <a href="https://oradocs-corp.documents.us2.oraclecloud.com/documents/link/LD0E89D92610FE7509B8E264F6C3FF17C1177A968060/fileview/D55CE202E2E5618BA26DCA7EF6C3FF17C1177A968060/_Brochure.pdf" target="_blank">invite template</a></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
