Commenting out beehive script reference to remove errors

--- a/Touch The Cloud.html
+++ b/Touch The Cloud.html
@@ -148,7 +148,7 @@
     <script src="js/touch-the-cloud/template.js"></script>
     <script src="js/script.js"></script>
     <!-- Start SiteCatalyst code -->
-    <script language="JavaScript" src="https://www.oracleimg.com/us/assets/metrics/ora_beehive.js"></script>
+    <!--    <script language="JavaScript" src="https://www.oracleimg.com/us/assets/metrics/ora_beehive.js"></script>-->
     <!-- End SiteCatalyst code -->
 </body>
 
