--- a/Touch The Cloud.html
+++ b/Touch The Cloud.html
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Touch The Cloud</title>
+    <title>Cloud Accelerate: iPaaS - Build a Quote to Order Process Workshop</title>
     <script src="js/pace.min.js"></script>
     <link href="css/pace.css" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet">
