--- a/Touch The Cloud.html
+++ b/Touch The Cloud.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://cloudaccelerate.github.io/TTC-CommonContent/fav.ico" />
     <title>Cloud Accelerate: iPaaS - Build a Quote to Order Process Workshop</title>
     <script src="js/pace.min.js"></script>
     <link href="css/pace.css" rel="stylesheet" />
